# openprocmon

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  procmon.sln
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
cmake/: FindWTL.cmake
cpp-backup/: CMakeLists.txt  procmon.sln
cpp-backup/cmake/: FindWdk.cmake
cpp-backup/gui/: CMakeLists.txt  View.h  dataview.cpp  filter.cpp  filter.hpp  filterdlg.h  filtermgr.h  fltprocess.h  main.cpp  procmon_gui.h  procmon_gui.vcxproj  procmon_gui.vcxproj.filters  propevent.cpp  propevent.h  propstack.h
cpp-backup/sdk/example/: CMakeLists.txt  example.cpp  sdktest.vcxproj.filters
cpp-backup/sdk/procmonsdk/: CMakeLists.txt  buffer.cxx  buffer.hpp  drvload.cxx  drvload.hpp  event.cxx  event.hpp  eventfactory.hpp  eventmgr.cxx  eventmgr.hpp  eventview.cxx  eventview.hpp  fileopt.cxx  fileopt.hpp  fltuser.hpp  kernelsdk.hpp  logger.cxx  logger.hpp  module.cxx  monctl.cxx  monctl.hpp  pch.cxx  procmgr.hpp  procmonsdk.vcxproj.filters  procopt.cxx  procopt.hpp  refobject.hpp  regopt.cxx  sdk.hpp  singleton.hpp  strmaps.cxx  strmaps.hpp  thread.cxx  viewer.cxx
crates/cli/: Cargo.toml
crates/cli/src/: elevate.rs  ipc.rs  loader.rs  main.rs  mcp.rs  orchestrate.rs  worker.rs
crates/core/: Cargo.toml
crates/core/src/: analyze.rs  capture.rs  export.rs  lib.rs  noise.rs  query.rs  record.rs  scope.rs  summary.rs  vocab.rs
crates/core/tests/: analyze.rs
crates/example/: Cargo.toml
crates/example/src/: main.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/assets/res/: manifest.xml
crates/gui/locales/: app.yml
crates/gui/src/: actions.rs  app.rs  icons.rs  main.rs  sysicon.rs  theme.rs
crates/gui/src/components/: detail_panel.rs  event_table.rs  menubar.rs  mod.rs  monitorbar.rs  statusbar.rs  toolbar.rs
crates/gui/src/dialogs/: about.rs  filter_dialog.rs  form_dialog.rs  mod.rs  path_summary.rs  process_summary.rs  process_tree.rs  save_dialog.rs  settings_dialog.rs  summary.rs
crates/gui/src/model/: buffer.rs  config.rs  domain.rs  filter.rs  mod.rs  sdk_source.rs  source.rs
crates/gui/themes/: procmon.json
crates/sdk/: Cargo.toml
crates/sdk/benches/: BASELINE.md  baseline.rs
crates/sdk/src/: driver.rs  error.rs  event.rs  filter.rs  kernel_types.rs  lib.rs  message.rs  metadata.rs  monitor.rs  network.rs  path.rs  pipeline.rs  port.rs  process.rs  resolver.rs  sid.rs  source.rs  strings.rs  symbols.rs  system.rs  time.rs
crates/sdk/src/parse/: file.rs  mod.rs  network.rs  proc.rs  reg.rs  transcode.rs
crates/sdk/src/pml/: detail.rs  mod.rs  model.rs  reader.rs  writer.rs
crates/sdk/tests/: offline.rs
crates/sdk/tests/fixtures/: README.md
crates/sdk/tests/resources/: CompressedLogFileBench64PML  CompressedLogFileUTC32FilesystemPML  CompressedLogFileUTC64FilesystemPML  CompressedLogFileUTC64ProcessPML  CompressedLogFileUTC64RegistryPML  CompressedLogfileTests32bitUTCPML  CompressedLogfileTests64bitUTCPML
docs/: mcp-guide.md  mcp-guide_zh.md  readme_zh.md  todo-network-time-and-inflight.md
docs/design/gui-design-v2/: OpenProcmon Design.html  app.jsx  data.js  detail.jsx  dialogs.jsx  i18n.js  icons.jsx  panels.css  settings.jsx  styles.css
gui/: CMakeLists.txt  MainFrm.h  RCa31028  dataview.cpp  dataview.h  eopcheck.cpp  eopcheck.hpp  filter.cpp  filter.hpp  filterdlg.cpp  filterdlg.h  filtermgr.cpp  filtermgr.h  fltprocess.h  main.cpp  procmon_gui.aps  procmon_gui.rc  procmon_gui.sln  procmon_gui.vcxproj  procmon_gui.vcxproj.filters  propdlg.cpp  propdlg.h  propevent.cpp  propevent.h  propproc.h  propstack.cpp  propstack.h  resource.h  status.cpp  status.h  stdafx.cpp  stdafx.h
kernel/: CMakeLists.txt  file.c  file.h  globals.c  globals.h  log.c  log.h  logsdk.h  ntheader.h  process.c  process.h  procmon.c  procmon.inf  procmon.rc  procmon.vcxproj  procmon.vcxproj.filters  reg.c  reg.h  utils.c  utils.h
sdk/example/: example.cpp  example.vcxproj
sdk/procmonsdk/: buffer.cxx  drvload.cxx  drvload.hpp  event.cxx  eventfactory.cxx  eventfactory.hpp  eventmgr.cxx  eventmgr.hpp  eventview.cxx  eventview.hpp  fileopt.cxx  fileopt.hpp  fltuser.hpp  kernelsdk.hpp  module.cxx  module.hpp  monctl.cxx  monctl.hpp  operator.cxx  operator.hpp  optmgr.cxx  optmgr.hpp  optview.cxx  optview.hpp  pch.hpp  process.cxx  process.hpp  procmgr.cxx  procmgr.hpp  procmonsdk.vcxproj  procmonsdk.vcxproj.filters  procopt.cxx  procopt.hpp  regopt.hpp  sdk.hpp  strmaps.cxx  strmaps.hpp  thread.cxx  thread.hpp  utils.cxx  (+3 more)
sdk/sdktest/: sdktest.cpp  sdktest.vcxproj  sdktest.vcxproj.filters
skills/procmon/: SKILL.md
