[package]
name = "procmon-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust SDK for communicating with the OpenProcessMonitor kernel miniFilter driver"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_LibraryLoader",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Power",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Wdk_Foundation",
    "Wdk_System_SystemServices",
    "Wdk_System_SystemInformation",
    "Wdk_System_Registry",
    "Wdk_Storage_FileSystem",
    "Wdk_Storage_FileSystem_Minifilters",
] }
thiserror = "2"
tracing = "0.1"
bitflags = "2"
crossbeam-channel = "0.5"
widestring = "1"
parking_lot = "0.12"
arc-swap = "1"
memmap2 = "0.9"
# Fast non-DoS-resistant hasher for the per-event hot maps (process table,
# PRE/POST correlation) — their keys are kernel-assigned integers, not
# attacker-controlled input, so SipHash's flooding resistance buys nothing.
rustc-hash = "2"

[dev-dependencies]
# Test PML fixtures (crates/sdk/tests/resources) are zlib-compressed;
# real PML is uncompressed. flate2 decompresses them for the reader tests.
flate2 = "1"
# Self-deleting temp files for the decompressed fixtures (the reader mmaps a
# file, so tests materialize them on disk; tempfile cleans them up on drop).
tempfile = "3"

# CPU + memory baseline for the hot ingest/parse/filter paths. Custom harness:
# a counting global allocator reports allocations alongside wall time.
[[bench]]
name = "baseline"
harness = false
